--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,7 +44,7 @@ agent any
 						// start of running steps inside one stage. Anurag added it on the remote repo
 						steps {
 							//bat 'cd target'
-							bat 'java -jar target\HelloWorlldService-0.0.1-SNAPSHOT.jar'
+							bat java -jar target\HelloWorlldService-0.0.1-SNAPSHOT.jar
 						}
 					}		
 			}	
