--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,8 +43,10 @@ agent any
 		
 						// start of running steps inside one stage. Anurag added it on the remote repo
 						steps {
-							//bat 'cd target'
-							bat java -jar target\HelloWorlldService-0.0.1-SNAPSHOT.jar
+							bat 'cd target'
+							echo " HERE IS THE WORKING DIRECTORY"
+							sh pwd
+							//bat java -jar target\HelloWorlldService-0.0.1-SNAPSHOT.jar
 						}
 					}		
 			}	
