--- a/jenkinsfile
+++ b/jenkinsfile
@@ -47,7 +47,7 @@ agent any
 							bat 'cd target'
 							echo " HERE IS THE WORKING DIRECTORY"
 							//sh pwd
-							bat 'java -jar target\HelloWorlldService-0.0.1-SNAPSHOT.jar'
+							bat 'java -jar HelloWorlldService-0.0.1-SNAPSHOT.jar'
 						}
 					}		
 			}	
