--- a/jenkinsfile
+++ b/jenkinsfile
@@ -46,8 +46,8 @@ agent any
 							bat 'cmd.exe'
 							bat 'cd target'
 							echo " HERE IS THE WORKING DIRECTORY"
-							//sh pwd
-							bat 'java -jar HelloWorlldService-0.0.1-SNAPSHOT.jar'
+							bat 'cd'
+							bat 'java -jar target/HelloWorlldService-0.0.1-SNAPSHOT.jar'
 						}
 					}		
 			}	
