--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,7 +44,7 @@ agent any
 						// start of running steps inside one stage. Anurag added it on the remote repo
 						steps {
 							//bat 'cmd.exe'
-							bat 'cd target'
+							bat 'cd C:\Program Files (x86)\Jenkins\workspace\HelloWorldService_pipeline\target'
 							bat 'cd'
 							echo " HERE IS THE WORKING DIRECTORY"
 							bat 'cd'
