--- a/jenkinsfile
+++ b/jenkinsfile
@@ -56,7 +56,7 @@ agent any
 		
 						// start of running steps inside one stage. Anurag added it on the remote repo
 						steps {
-							dir('*/target') {
+							dir('target') {
 											echo " HERE IS THE WORKING DIRECTORY"
 											bat 'cd'
 											bat 'java -jar HelloWorlldService-0.0.1-SNAPSHOT.jar'
